# FishQueryPlatform

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: depoly.yml
AI4WAPlatform/: asgi.py  settings.py  urls.py  wsgi.py
FishQueryPlatform/: asgi.py  settings.py  urls.py  wsgi.py
FishQueryPlatform/settings/: __init__.py  base.py  dev.py  prod.py
chat/: admin.py  models.py  serializers.py  views.py
chat/migrations/: 0001_addChat.py  0001_addChatModels.py  0002_removeTitleOfConversation.py
chats/: admin.py  models.py  serializers.py  services.py  throttling.py  urls.py  utils.py  views.py
chats/migrations/: 0001_initial.py  0002_add_db_cascade_constraints.py  0003_add_message_citations.py
core/: admin.py  middleware.py  models.py  responses.py  serializers.py  throttles.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_rename_daily_chat_quota_customuser_daily_message_quota_and_more.py
hasura/metadata/databases/default/tables/: public_auth_user.yaml  public_chat_conversation.yaml  public_chat_message.yaml  public_chats_chat.yaml  public_chats_message.yaml  public_core_customuser.yaml  public_token_blacklist_blacklistedtoken.yaml  public_token_blacklist_outstandingtoken.yaml  tables.yaml
